Should change variables...

--- a/src/lithium/doc/lithium13.tex
+++ b/src/lithium/doc/lithium13.tex
@@ -479,6 +479,16 @@ $$
 \end{equation}
 
 \subsection{Delta Lithium}
+\begin{equation}
+	\deltaLi = 10^3 \left( \left[1+10^{-3}\deltaLiOut\right] \dfrac{\beta_7}{\beta_6} - 1\right)
+\end{equation}
+
+\begin{equation}
+	\dfrac{\beta_7}{\beta_6} = 
+	\dfrac
+	{\left(1-e^{-\tau}\right) + \psi \Xi\left(\tau,\sigma\right)}
+	{\left(1-e^{-\lambda\tau}\right) + \psi \Xi\left(\lambda\tau,\sigma/\lambda\right)}
+\end{equation}
 
 \end{document}
 
