WIP, will make v14

--- a/src/lithium/doc/lithium14.tex
+++ b/src/lithium/doc/lithium14.tex
@@ -76,9 +76,9 @@ $$
 
 \subsection{Hypothesis}
 \begin{itemize}
-\item $\proton$ is a slowly varying parameter $h(t)$.
+\item $\proton$ is a  varying parameter $h(t)$.
 \item $\LiOut{6}$ and  $\LiOut{7}$ are parameters.
-\item Variables noted with a '$\tilde{~}$' are dependent on those "parametric" concentrations
+%\item Variables noted with a '$\tilde{~}$' are dependent on those "parametric" concentrations
 \end{itemize}
 
 \subsection{Kinetics}
