WIP solving beta

--- a/src/lithium/doc/lithium14.tex
+++ b/src/lithium/doc/lithium14.tex
@@ -377,6 +377,10 @@ with
 \right.
 \end{equation}
 \item $t>t_c$
+\begin{equation}
+	\beta_x^\ast(t'=t-t_c) = \beta_{x,c} e^{-k_xt'} + \beta^\ast \left(1-e^{-k_xt'}\right) + \kappa^\ast(\alpha_\infty^\ast-\alpha_c) \Xi\left(k_xt',\sigma_x^\ast\right)\\
+\end{equation}
+
 \end{itemize}
 
 \end{document}
