need to define different samples and times

--- a/src/lithium/doc/lithium14.tex
+++ b/src/lithium/doc/lithium14.tex
@@ -466,5 +466,24 @@ then
 	{\beta_{7,c}e^{-\tau'}+\beta^\ast \left(1-e^{-\tau'}\right)}
 	{\beta_{6,c}e^{-\lambda\tau'}+\beta^\ast \left(1-e^{-\lambda\tau'}\right)}
 \end{equation}
+with
+\begin{equation}
+	\beta_{x,c} \simeq \beta \left(1-e^{-k_x t_c}\right)
+\end{equation}
+for we expect that the catalytic part vanished at that point.
+Then
+\begin{equation}
+\begin{array}{rcl}
+	\beta_{7,c} & = & \beta \left(1-e^{-\tau_c}\right)\\
+	\beta_{6,c} & = & \beta \left(1-e^{-\lambda\tau_c}\right)\\
+\end{array}
+\end{equation}
+and
+\begin{equation}
+	t > t_c,\;\; \dfrac{\beta_7}{\beta_6} \approx 
+	\dfrac
+	{\left(1-e^{-\tau_c}\right)e^{-\tau'} + \gamma \left(1-e^{-\tau'}\right)}
+	{\left(1-e^{-\lambda\tau_c}\right)e^{-\lambda\tau'} + \gamma \left(1-e^{-\lambda\tau'}\right)}
+\end{equation}
 
 \end{document}
