ok, integrated alpha

--- a/src/lithium/doc/lithium14.tex
+++ b/src/lithium/doc/lithium14.tex
@@ -486,4 +486,27 @@ and
 	{\left(1-e^{-\lambda\tau_c}\right)e^{-\lambda\tau'} + \gamma \left(1-e^{-\lambda\tau'}\right)}
 \end{equation}
 
+\section{Direct Integration}
+
+\begin{equation}
+	\partial_t\alpha  = \omega_0 - \alpha\left\lbrack k_h+\omega_0\right\rbrack 
+\end{equation}
+and with
+$$
+	\omega_x =  \dfrac{\bar{p}^2}{\tilde{D}} k_x \proton \LiOut{x}
+$$
+then
+$$
+	\omega_0 = \bar{p}^2 k_7 h(t) \dfrac{\left(c^2+\lambda s^2\right) \LiOut{} }{ 1 + \left(c^2J_6+s^2J_7\right) \LiOut{}}.
+$$
+That we rewrite
+$$
+	\omega_0 = k_7  \gamma h(t) 
+$$
+where $\gamma$ is an inverse concentration that depends on the external concentrations in lithium.
+Then
+\begin{equation}
+	\partial_t \alpha = k_7  \left(\gamma h(t) - \alpha \left[\gamma h(t) + \eta \right]\right),\;\;\eta=\dfrac{k_h}{k_7}
+\end{equation}
+
 \end{document}
