--- a/src/lithium/doc/lithium14.tex
+++ b/src/lithium/doc/lithium14.tex
@@ -509,4 +509,13 @@ Then
 	\partial_t \alpha = k_7  \left(\gamma h(t) - \alpha \left[\gamma h(t) + \eta \right]\right),\;\;\eta=\dfrac{k_h}{k_7}
 \end{equation}
 
+\begin{equation}
+	\kappa = \dfrac{\bar{p}^2 \proton E_0}{\tilde{D}} = \mu h(t)
+\end{equation}
+
+\begin{equation}
+	\partial_t \beta_x =  k_x \left( \Theta + \mu h(t) (1-\alpha(t)) - \beta_x\right)
+\end{equation}
+
+
 \end{document}
