--- a/src/lithium/doc/lithium14.tex
+++ b/src/lithium/doc/lithium14.tex
@@ -501,20 +501,20 @@ $$
 $$
 That we rewrite
 $$
-	\omega_0 = k_7  \gamma h(t) 
+	\omega_0 = k_7  \gamma \frac{h(t)}{h_0}
 $$
 where $\gamma$ is an inverse concentration that depends on the external concentrations in lithium.
 Then
 \begin{equation}
-	\partial_t \alpha = k_7  \left(\gamma h(t) - \alpha \left[\gamma h(t) + \eta \right]\right),\;\;\eta=\dfrac{k_h}{k_7}
+	\partial_t \alpha = k_7  \left(\gamma \frac{h(t)}{h_0} - \alpha \left[\gamma \frac{h(t)}{h_0} + \eta \right]\right),\;\;\eta=\dfrac{k_h}{k_7}
 \end{equation}
 
 \begin{equation}
-	\kappa = \dfrac{\bar{p}^2 \proton E_0}{\tilde{D}} = \mu h(t)
+	\kappa = \dfrac{\bar{p}^2 \proton E_0}{\tilde{D}} = \mu \frac{h(t)}{h_0}
 \end{equation}
 
 \begin{equation}
-	\partial_t \beta_x =  k_x \left( \Theta + \mu h(t) (1-\alpha(t)) - \beta_x\right)
+	\partial_t \beta_x =  k_x \left( \Theta + \mu \frac{h(t)}{h_0} (1-\alpha(t)) - \beta_x\right)
 \end{equation}
 
 
