--- a/src/lithium/doc/lithium15.tex
+++ b/src/lithium/doc/lithium15.tex
@@ -379,6 +379,17 @@ and after that
 \beta_x = k_x\left[\int_0^t \kappa E_0 h(t) \hat\alpha(t) e^{k_xu} \, \mathrm{d}u\right] e^{-k_xt}
 \end{equation}
 
+And we remind that
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+	\dfrac{\beta_7}{\beta_6} & = & \dfrac{1+10^{-3}\deltaLi}{1+10^{-3}\deltaLi_{out}} \\
+	\\
+	\deltaLi & = & 10^3 \left( \left[1+10^{-3}\deltaLi_{out}\right] \dfrac{\beta_7}{\beta_6} - 1 \right)\\
+\end{array}
+\right.
+\end{equation}
+
 \subsection{First Order Short Times}
 
 
